--- a/src/.env.example
+++ b/src/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
+ADMIN_NAME=管理者
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=password
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
