--- a/docker/php.ini
+++ b/docker/php.ini
@@ -4,7 +4,7 @@ error_reporting = E_ALL
 
 [Xdebug]
 xdebug.mode=develop,debug
-xdebug.start_with_request=trigger
+xdebug.start_with_request=yes
 xdebug.discover_client_host=true
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
